[package]
name = "mayday"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
serde = { version = "1.0.188", features = ["derive"] }
serde_bytes = "0.11.12"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
ulid = "1.0.1"
